# emojify

./: .gitignore  Makefile.toml  README.md
app/: Cargo.toml  Config.Example.toml
app/src/: config.rs  data.rs  error.rs  main.rs
app/src/command/: emojify.rs  mod.rs
app/src/handler/: error.rs  mod.rs  pre_command.rs  ready.rs
inner-api/: converter.py  generator.py  main.py
