[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
env_logger = "0.9.0"
log = "0.4.14"
poise = { git = "https://github.com/kangalioo/poise", features = ["collector"] }
reqwest = { version = "0.11.4", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.29"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "process"] }
toml = "0.5.8"
